Removed multidim example, ajusted j_eval examples for derivatives

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 196,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 197,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 198,
    "id": "c4ba9f04",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 199,
    "id": "ee242ee7",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 200,
    "id": "f351d15f",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 201,
    "id": "0fdcc0a7",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 202,
    "id": "d85898e9",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 203,
    "id": "189d7837",
    "metadata": {},
    "outputs": [
@@ -296,27 +296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 217,
    "id": "616fdae5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "BoundsError",
-     "evalue": "BoundsError: attempt to access 2-element Vector{Float64} at index [1:5]",
-     "output_type": "error",
-     "traceback": [
-      "BoundsError: attempt to access 2-element Vector{Float64} at index [1:5]\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] throw_boundserror(A::Vector{Float64}, I::Tuple{UnitRange{Int64}})\n",
-      "   @ Base .\\essentials.jl:14\n",
-      " [2] checkbounds\n",
-      "   @ .\\abstractarray.jl:699 [inlined]\n",
-      " [3] getindex(A::Vector{Float64}, I::UnitRange{Int64})\n",
-      "   @ Base .\\array.jl:936\n",
-      " [4] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X22sZmlsZQ==.jl:6"
-     ]
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " -0.4794255386041693\n",
+       " -0.6816387600233019"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -325,24 +318,21 @@
     "\n",
     "diffmat=j_eval(xjvals,xivals,diff=1) #E matrix of lj(xi) components\n",
     "dfxivals=diffmat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
-    "dfxivals[1:5]"
+    "#dfxivals[1:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 230,
    "id": "9c2e66bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Vector{Float64}:\n",
-       " -0.8414709848078965\n",
-       " -0.841404322650035\n",
-       " -0.8412042758047135\n",
-       " -0.8408706633083012\n",
-       " -0.8404031840598705"
+       "2-element Vector{Float64}:\n",
+       " -0.479425538604203\n",
+       " -0.6816387600233341"
       ]
      },
      "metadata": {},
@@ -351,12 +341,13 @@
    ],
    "source": [
     "#Compare the above to the true values of f'(x_j) -> remember x_j are the interpolation points\n",
-    "diff_exact=-sin.(xjvals)[1:5]"
+    "#diff_exact=-sin.(xjvals)[1:5]\n",
+    "diff_exact=-sin.(xivals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "335a471e",
    "metadata": {},
    "outputs": [
@@ -389,14 +380,14 @@
    ],
    "source": [
     "#Find the derivative f'(0.5), f'(0.75) for f(x)=cos(x)\n",
-    "emat# E_ij matrix for the relevant lj(xi) values\n",
+    "#emat# E_ij matrix for the relevant lj(xi) values\n",
     "\n",
-    "fderivvals=emat*diffmat*fvec"
+    "#fderivvals=emat*diffmat*fvec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "c60bfb69",
    "metadata": {},
    "outputs": [
@@ -414,52 +405,37 @@
    ],
    "source": [
     "#f'(x)=-sin(x)\n",
-    "true_derivvals=-sin.(xivals)"
+    "#true_derivvals=-sin.(xivals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 260,
    "id": "f0bfe6f9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "DimensionMismatch",
-     "evalue": "DimensionMismatch: second dimension of A, 201, does not match length of x, 2",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch: second dimension of A, 201, does not match length of x, 2\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] gemv!\n",
-      "   @ C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:438 [inlined]\n",
-      " [2] generic_matvecmul!\n",
-      "   @ C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:79 [inlined]\n",
-      " [3] _mul!\n",
-      "   @ C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:73 [inlined]\n",
-      " [4] mul!\n",
-      "   @ C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:70 [inlined]\n",
-      " [5] mul!\n",
-      "   @ C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:253 [inlined]\n",
-      " [6] *(A::Matrix{Float64}, x::Vector{Float64})\n",
-      "   @ LinearAlgebra C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:56\n",
-      " [7] *\n",
-      "   @ C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:1116 [inlined]\n",
-      " [8] *(A::Matrix{Float64}, B::Matrix{Float64}, C::Matrix{Float64}, x::Vector{Float64})\n",
-      "   @ LinearAlgebra C:\\Users\\evasi\\AppData\\Local\\Programs\\Julia-1.11.5\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\matmul.jl:1193\n",
-      " [9] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X26sZmlsZQ==.jl:2"
-     ]
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " -0.8775825627021878\n",
+       " -0.7316888688605298"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#Finding f''(0.5), f''(0.75) for f(x)=cos(x)\n",
-    "d2fvals=emat*diffmat*diffmat*fvec"
+    "#d2fvals=emat*diffmat*diffmat*fvec\n",
+    "D2=j_eval(xjvals,xivals,diff=2)\n",
+    "d2fvals=D2*fvec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 261,
    "id": "83db749e",
    "metadata": {},
    "outputs": [
@@ -482,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 262,
    "id": "1c718608",
    "metadata": {},
    "outputs": [],
@@ -516,23 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 263,
    "id": "25d493e8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemError",
-     "evalue": "SystemError: opening file \"c:\\\\Users\\\\evasi\\\\OneDrive\\\\2025 Summer Internship\\\\DDE-internship-code\\\\shared\\\\jacobian_new.jl\": No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "SystemError: opening file \"c:\\\\Users\\\\evasi\\\\OneDrive\\\\2025 Summer Internship\\\\DDE-internship-code\\\\shared\\\\jacobian_new.jl\": No such file or directory\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] include(fname::String)\n",
-      "   @ Main .\\sysimg.jl:38\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X34sZmlsZQ==.jl:6"
-     ]
+     "data": {
+      "text/plain": [
+       "create_hopffunc (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -541,12 +512,12 @@
     "include(\"Neuron_demo/neuronfunc.jl\") #system of neuron example\n",
     "include(\"Neuron_demo/neurontau.jl\") #Delay forumla for neuron example\n",
     "include(\"shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"shared/jacobian_new.jl\") #Jacobian function\n",
-    "include(\"shared/newton_new.jl\") #Newton function\n",
+    "include(\"shared/jacobian.jl\") #Jacobian function\n",
+    "include(\"shared/newton.jl\") #Newton function\n",
     "include(\"shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
+    "include(\"shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
     "include(\"shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
-    "include(\"stab_func_bi.jl\")#finds stability and rightmost eigenvalue using barycentric interpolation\n",
+    "#include(\"stab_func_bi.jl\")#finds stability and rightmost eigenvalue using barycentric interpolation\n",
     "\n",
     "#USe the ones below when you have moved this notebook into its own folder\n",
     "#include(\"../Neuron_demo/neuronfunc.jl\") #system of neuron example\n",
@@ -562,21 +533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 264,
    "id": "af703dbb",
    "metadata": {},
    "outputs": [
     {
      "ename": "UndefVarError",
-     "evalue": "UndefVarError: `create_ststfunc` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "evalue": "UndefVarError: `track_curve_new` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: `create_ststfunc` not defined in `Main`\n",
+      "UndefVarError: `track_curve_new` not defined in `Main`\n",
       "Suggestion: check for spelling errors or missing imports.\n",
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X35sZmlsZQ==.jl:11"
+      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X35sZmlsZQ==.jl:12"
      ]
     }
    ],
@@ -603,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 265,
    "id": "cace5d36",
    "metadata": {},
    "outputs": [
@@ -644,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 266,
    "id": "3a787d2f",
    "metadata": {},
    "outputs": [
@@ -669,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 267,
    "id": "990c42d7",
    "metadata": {},
    "outputs": [
@@ -714,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 268,
    "id": "32096236",
    "metadata": {},
    "outputs": [
@@ -769,97 +740,6 @@
     "end \n",
     "\n",
     "eigvals(stabmatrixAtrial2) #rightmost eigenvalue matches the one in Breda source!!!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "435bc6c4",
-   "metadata": {},
-   "source": [
-    "# 2D Barycentric interpolation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22c816dd",
-   "metadata": {},
-   "source": [
-    "For now (18.08.2025), we're looking at Chebyshev points of the 2nd kind. Say we have a structured grid, for example in 2D:\n",
-    "```math\n",
-    "\\begin{align*}\n",
-    "x_i &= \\cos(\\frac{\\pi i}{n_x}) & \\text{for i=0,..., $n_x$}\\\\\n",
-    "y_j &=\\cos(\\frac{\\pi j}{n_y}) & \\text{for j=0,..., $n_y$}\n",
-    "\\end{align*}\n",
-    "```\n",
-    "And let $f_{ij}=f(x_i,y_j)$ be the function value at $(x_i,y_j)$  - i.e. $f_{ij}=f(x_i,y_j)$. Next we compute the weights $w_i^{(x)}$ for $x_i$ and the weights $w_j^{(y)}$ for $y_j$. The interpolant at a point $(x,y)$ is:\n",
-    "```math\n",
-    "p(x,y)=\\frac{\\sum_{i=0}^{n_x} \\sum_{j=0}^{n_y} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\frac{w_j^{(y)}}{y-y_j} \\cdot f_{ij}}{\\sum_{i=0}^{n_x} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\sum_{j=0}^{n_y} \\frac{w_j^{(y)}}{y-y_j}}\n",
-    "```\n",
-    "For ease, we assume $n_x=n_y=n$ and the function ```j_eval_multidim``` uses the following algorithm to compute $p(x,y)$ on a structured grid:\n",
-    "1. For each new $y$ we wish to evaluate at, we fix the $y$ and for each $i$, interpolate in the $y$-direction to get:\n",
-    "```math\n",
-    "g_i(y)=\\frac{\\sum_{j=0}^{n} \\frac{w_j^{(y)}}{y-y_j}f_{ij}}{\\sum_{j=0}^{n}\\frac{w_j^{(y)}}{y-y_j}}\n",
-    "``` \n",
-    "2. Then the function interpolates in $x$:\n",
-    "```math\n",
-    "p(x,y)=\\frac{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}g_i(y)}{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}}\n",
-    "```\n",
-    "Note the above algorithm can be generalised to 3+ dimensions by interpolating along one axis at a time.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "id": "e7866008",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemError",
-     "evalue": "SystemError: opening file \"c:\\\\Users\\\\evasi\\\\OneDrive\\\\2025 Summer Internship\\\\DDE-internship-code\\\\j_eval_multidim.jl\": No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "SystemError: opening file \"c:\\\\Users\\\\evasi\\\\OneDrive\\\\2025 Summer Internship\\\\DDE-internship-code\\\\j_eval_multidim.jl\": No such file or directory\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] include(fname::String)\n",
-      "   @ Main .\\sysimg.jl:38\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X46sZmlsZQ==.jl:2"
-     ]
-    }
-   ],
-   "source": [
-    "#for basic functio f(x,y)=x+y, where we want to find f(0.25,2)\n",
-    "include(\"j_eval_multidim.jl\")\n",
-    "fmat1=[2 1 0; 1 0 -1; 0 -1 -2]\n",
-    "j_eval_multidim([[1,1],[0,0],[-1.0,-1]],[[0.25,2]],fmat1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "id": "63633f8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemError",
-     "evalue": "SystemError: opening file \"c:\\\\Users\\\\evasi\\\\OneDrive\\\\2025 Summer Internship\\\\DDE-internship-code\\\\basic_func.jl\": No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "SystemError: opening file \"c:\\\\Users\\\\evasi\\\\OneDrive\\\\2025 Summer Internship\\\\DDE-internship-code\\\\basic_func.jl\": No such file or directory\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] include(fname::String)\n",
-      "   @ Main .\\sysimg.jl:38\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X50sZmlsZQ==.jl:2"
-     ]
-    }
-   ],
-   "source": [
-    "#check it against true answer\n",
-    "include(\"basic_func.jl\")\n",
-    "true_ans=basic_func(0.25,2)"
    ]
   }
  ],
