--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -473,7 +473,7 @@
    "id": "641fa80f",
    "metadata": {},
    "source": [
-    "# Stability using barycentric interpolation"
+    "# Stability using barycentric interpolation - Breda et al 2009 method"
    ]
   },
   {
