Changed create_hopffunc and demo

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 1,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 2,
    "id": "be5d4b96",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 3,
    "id": "b6ab8081",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 4,
    "id": "3cc0add2",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 5,
    "id": "eb2591f3",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "955dd959",
    "metadata": {},
    "outputs": [
@@ -297,12 +297,12 @@
    "id": "eeaec415",
    "metadata": {},
    "source": [
-    "First we'll find the delay $\\tau$ for the Hopf bifurcation using the large matrix stability finding method (```stab_func_matrix```). The code for this is given below:"
+    "Note that while the initial guess of $\\tau$ can be found using both ```stab_func_matrix``` and ```stab_func_DDE``` the true Hopf bifurcation can be found only when using the stability function ```stab_func_matrix``` for this project. The code for finding the initial guesses of $\\tau$ for the two different stability methods is given below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 7,
    "id": "eca4eb12",
    "metadata": {},
    "outputs": [
@@ -323,16 +323,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fadae4dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48000000000000026"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Initial guess for tau for Hopf bifurcation using stab_func_DDE\n",
+    "hopf_DDEindx=findfirst(isequal(0.0), stab_DDE) #finds index of initial parameter guess\n",
+    "p_hopf_DDEest=plist1[hopf_DDEindx] #initial guess for τ for Hopf bifurcation"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dc7c1e07",
    "metadata": {},
    "source": [
-    "Having found the initial guess for the τ value of the Hopf bifurcation, we now find the ω value and true value of τ for the Hopf bifurcation:"
+    "Having found the initial guess (taking the one given by ```stab_func_matrix```) for the τ value of the Hopf bifurcation, we now find the ω value and true value of τ for the Hopf bifurcation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 9,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -362,77 +384,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7b1ebc86",
-   "metadata": {},
-   "source": [
-    "Next we'll find the delay $\\tau$ for the Hopf bifurcation using the barycentric interpolation stability finding method (```stab_func_bi```). The code for this is given below:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 326,
-   "id": "45319c48",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `stab_bi` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `stab_bi` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Mackey-Glass_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X30sZmlsZQ==.jl:2"
-     ]
-    }
-   ],
-   "source": [
-    "#Initial guess for tau for Hopf bifurcation using stab_func_bi\n",
-    "hopf_biindx=findfirst(isequal(0.0), stab_bi) #finds index of initial parameter guess\n",
-    "p_hopf_biest=plist1[hopf_biindx] #initial guess for τ for Hopf bifurcation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 327,
-   "id": "9b51b5f4",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `stab_func_bi` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `stab_func_bi` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] create_hopffunc(f_DDE::typeof(mackeyglassfunc), f_tau::typeof(mackeytau), pars::Vector{Float64}, x0::Vector{Float64}, p0::Vector{Float64}, par_indx::Vector{Int64}, nd::Int64; m::Int64, stabtype::String, N_num::Int64)\n",
-      "   @ Main c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\shared\\create_hopffunc.jl:44\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Mackey-Glass_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X31sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
-   "source": [
-    "yh02,fhopf2=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
-    "println(\"The initial guess for Hopf info: $yh02\")\n",
-    "yh2,conv2,=newton(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
-    "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
-    "println(\"converged?: $conv2\")\n",
-    "tau_2hopf=yh2[end]\n",
-    "om_2hopf=yh2[end-1]\n",
-    "x_2hopf=yh2[1]\n",
-    "println(\"The τ value for hopf bifurcation: $tau_2hopf\")\n",
-    "println(\"The ω value for hopf bifurcation: $om_2hopf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 13,
    "id": "8e811512",
    "metadata": {},
    "outputs": [
@@ -440,33 +393,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated τ value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: 0.49000000000000027\n"
-     ]
-    },
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `p_hopf_biest` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `p_hopf_biest` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Mackey-Glass_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X32sZmlsZQ==.jl:2"
+      "The estimated τ value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: 0.49000000000000027\n",
+      "The estimated τ value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: 0.48000000000000026\n",
+      "The true τ value for hopf bifurcation when using stab_func_matrix: 0.47081962953876083\n"
      ]
     }
    ],
    "source": [
     "println(\"The estimated τ value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: $p_hopf_est\")\n",
-    "println(\"The estimated τ value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: $p_hopf_biest\")\n",
-    "println(\"The true τ value for hopf bifurcation when using stab_func_matrix: $tau_hopf\")\n",
-    "println(\"The true τ value for hopf bifurcation when using stab_func_matrix: $tau_2hopf\")"
+    "println(\"The estimated τ value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: $p_hopf_DDEest\")\n",
+    "println(\"The true τ value for hopf bifurcation when using stab_func_matrix: $tau_hopf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 14,
    "id": "0d2e7b31",
    "metadata": {},
    "outputs": [
@@ -509,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 15,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
