Added more comments

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -406,6 +406,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dca97ee9",
+   "metadata": {},
+   "source": [
+    "We see that ```stab_func_DDE``` is more accurate than ```stab_func_matrix``` as the initial guess of the Hopf $\\tau$ value obtained from ```stab_func_DDE``` ($\\approx 0.48$)is closer to the true $\\tau$ Hopf value ($\\approx 0.47$) than the initial guess when using ```stab_func_matrix``` ($\\approx 0.49$)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "0d2e7b31",
