Changed create_hopffunc and adjusted demo

--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "a584c15a",
    "metadata": {},
    "outputs": [
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "9fc884f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.0, 0.0, 2.34], var\"#f_equilibrium#25\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
+       "([0.0, 0.0, 2.34], var\"#f_equilibrium#90\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
       ]
      },
      "metadata": {},
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "23a36df6",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "5f278333",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "ea4aa717",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "669aa48b",
    "metadata": {},
    "outputs": [
@@ -341,15 +341,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8322a68a",
+   "id": "ee64bc43",
    "metadata": {},
    "source": [
-    "First we'll find the parameter $a_{21}$ value for the Hopf bifurcation using the large matrix stability finding method (```stab_func_matrix```). The code for this is given below:"
+    "Note that while the initial guess of $a_{21}$ can be found using both ```stab_func_matrix``` and ```stab_func_DDE``` the true Hopf bifurcation can be found only when using the stability function ```stab_func_matrix``` for this project. The code for finding the initial guesses of $a_{21}$ for the two different stability methods is given below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "e08cf059",
    "metadata": {},
    "outputs": [
@@ -364,14 +364,37 @@
     }
    ],
    "source": [
-    "#We aim to find where the eigenvalues cross the imaginary axis (and become purely imaginary )\n",
+    "#We aim to find where the eigenvalues cross the imaginary axis (and become purely imaginary)\n",
+    "#Finds initial a21 value for Hopf bifurcation from stab_func_matrix results\n",
     "unstab_indx=findfirst(isequal(0.0),stab) #find index of stability change\n",
     "a21unstab=avals[unstab_indx] #initial guess of a21 value for Hopf bifurcation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
+   "id": "1447cdca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8100000000000005"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Finds initial a21 value for Hopf bifurcation from stab_func_DDE results\n",
+    "unstab_DDEindx=findfirst(isequal(0.0),stab_DDE) #finds index of Hopf bifurcation (for stability vector given by stab_func_bi)\n",
+    "a21unstabDDE=plist1[unstab_DDEindx] #finds initial guess for parameter a21 value for a Hopf bifurcation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ffd8cae6",
    "metadata": {},
    "outputs": [
@@ -404,12 +427,12 @@
    "id": "a000846f",
    "metadata": {},
    "source": [
-    "Now we have an initial guess for the Hopf parameters we find the true parameter values:"
+    "Now we have an initial guess (taking the one obtained from ```stab_func_matrix```) for the Hopf parameters we find the true parameter values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -439,79 +462,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7fae87bf",
-   "metadata": {},
-   "source": [
-    "Next we'll find the parameter $a_{21}$ value for the Hopf bifurcation using the barycentric interpolation stability finding method (```stab_func_bi```). The code for this is given below:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "21859048",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `stab_bi` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `stab_bi` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Neuron_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X33sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
-   "source": [
-    "unstab_biindx=findfirst(isequal(0.0),stab_bi) #finds index of Hopf bifurcation (for stability vector given by stab_func_bi)\n",
-    "a21unstabbi=plist1[unstab_biindx] #finds initial guess for parameter a21 value for a Hopf bifurcation\n",
-    "\n",
-    "println(\"The estimated a21 value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: $a21unstab\")\n",
-    "println(\"The estimated a21 value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: $a21unstabbi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "70e74113",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `stab_func_bi` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `stab_func_bi` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] create_hopffunc(f_DDE::typeof(neuronfunc), f_tau::typeof(neurontau), pars::Vector{Float64}, x0::Vector{Float64}, p0::Vector{Float64}, par_indx::Vector{Int64}, nd::Int64; m::Int64, stabtype::String, N_num::Int64)\n",
-      "   @ Main c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\shared\\create_hopffunc.jl:44\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Neuron_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X34sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
-   "source": [
-    "yh02,fhopf2=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and a21 estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
-    "println(\"The initial guess for Hopf info: $yh02\")\n",
-    "yh2,conv2,=newton(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
-    "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
-    "println(\"converged?: $conv2\")\n",
-    "a_2hopf=yh2[end]\n",
-    "om_2hopf=yh2[end-1]\n",
-    "x_2hopf=yh2[1:2]\n",
-    "println(\"The ω value for Hopf bifurcation: $om_2hopf\")\n",
-    "println(\"The a21 value for Hopf bifurcation: $a_2hopf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "e00c8cf8",
    "metadata": {},
    "outputs": [
@@ -519,31 +471,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The estimated a21 value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: 0.8400000000000005\n",
+      "The estimated a21 value for Hopf bifurcation using  stab_func_DDE is: 0.8100000000000005\n",
       "True a21 value for Hopf bifurcation given by stab_func_matrix: 0.8071232251830753\n"
-     ]
-    },
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `a_2hopf` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `a_2hopf` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Neuron_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X35sZmlsZQ==.jl:2"
      ]
     }
    ],
    "source": [
-    "println(\"True a21 value for Hopf bifurcation given by stab_func_matrix: $a_hopf\")\n",
-    "println(\"True a21 value for Hopf bifurcation given by stab_func_bi: $a_2hopf\")"
+    "println(\"The estimated a21 value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: $a21unstab\")\n",
+    "println(\"The estimated a21 value for Hopf bifurcation using  stab_func_DDE is: $a21unstabDDE\")\n",
+    "println(\"True a21 value for Hopf bifurcation given by stab_func_matrix: $a_hopf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76d9b795",
+   "metadata": {},
+   "source": [
+    "We see that ```stab_func_DDE``` is more accurate than ```stab_func_matrix``` as the initial guess of the Hopf $a_{21}$ value obtained from ```stab_func_DDE``` ($\\approx 0.81$)is closer to the true $a_{21}$ Hopf value ($\\approx 0.807$) than the initial guess when using ```stab_func_matrix``` ($\\approx 0.84$)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "85dfe439",
    "metadata": {},
    "outputs": [
@@ -589,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
